[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumioo"
version = "0.0.1"
authors = [
  { name="Julien K", email="code@juli3n.xyz" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/juli3nk/lumioo-py"
"Bug Tracker" = "https://github.com/juli3nk/lumioo-py/issues"
